2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/GnomeProxy.cs:

	Better error handling.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/Song.cs:
	* src/SongDatabase.cs:

	Dirty, but absolutely massive optimization using g_path_get_dirname
	instead of FileInfo. This cuts down startup time to a sane 5 seconds
	when not cached, or one second when cached (~20k songs).

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverImage.cs:

	Only show "loading" image when an image is actually loading.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/Player.cs:
	* src/PlaylistWindow.cs:

	More startup optimization.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/db.c: (db_foreach):
	* src/CoverDatabase.cs:
	* src/SongDatabase.cs:

	More optimization and thread fixage.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:

	Add some Thread.Sleep stuff to make the thread eat the CPU a little
	less vigorously.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-xine.c: (player_open), (player_stop):
	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Fix some stop madness.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Show window as soon as possible.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Don't remove album covers when albums from removable media are
	removed.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* src/AddAlbumWindow.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/Muine.cs:
	* src/SongDatabase.cs:

	Read album covers in a thread on startup. This greatly improves
	startup speed.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:
	* src/SkipToWindow.cs:

	Defer initialization of dialogs till when they are requested.

2004-04-14  Artur Flinta  <aflinta@cvs.gnome.org>

        * configure.in:
	    Added "pl" to ALL_LINGUAS.

2004-04-13  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:
